--- a/src/Filters.css
+++ b/src/Filters.css
@@ -1,7 +1,25 @@
-body {
-    font-family: "Open Sans", Helvetica, Arial, sans-serif;
-    font-size: 14px;
-    line-height: 1.563;
-    color: #000407;
-
-}
+.wrap {
+    width: 100%;
+    overflow:auo;
+    }
+    
+    .fleft {
+        float:left; 
+        width: 10%;
+ background-color: rgb(46, 145, 179);
+        height: 4000px;
+    }
+    
+   
+    .fright1 {
+        float: right;
+            background:rgb(237, 242, 245);
+            height: 4000px;
+            width: 25%;
+        } 
+        .fright {
+            float: right;
+                background:rgb(219, 104, 69);
+                height: 4000px;
+                width: 65%;
+            }
